@@ -1,3 +1,4 @@
+* Add VIES check with the SOAP Service of EU
 * Add test for Bulgaria VAT number with length of 9
 
 Version 0.3 - 2009-03-23
